--- a/.github/workflows/deploys.yml
+++ b/.github/workflows/deploys.yml
@@ -45,4 +45,4 @@ jobs:
             docker rm ecciContainer
             docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/ecci-images
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/ecci-images
-            docker run -d -p 80:80 -e JWT_KEY=${{ secrets.JWT_KEY }} -e DBUSER=${{ secrets.DBUSER }} -e DBPASS=${{ secrets.DBPASS }} -e DBHOST=${{ secrets.DBHOST }} -e DBPORT=${{ secrets.DBPORT }} -e DBNAME=${{ secrets.DBNAME }} --name ecciContainer ${{ secrets.DOCKERHUB_USERNAME }}/ecci-images:latest
+            docker run -d -p 80:80 -e JWTSECRET=${{ secrets.JWTSECRET }} -e DBUSER=${{ secrets.DBUSER }} -e DBPASS=${{ secrets.DBPASS }} -e DBHOST=${{ secrets.DBHOST }} -e DBPORT=${{ secrets.DBPORT }} -e DBNAME=${{ secrets.DBNAME }} --name ecciContainer ${{ secrets.DOCKERHUB_USERNAME }}/ecci-images:latest
